# aiops-v2

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  plugin.yaml  pyproject.toml
config/: injection_patterns.yaml  prometheus.yml
config/hermes/: routes.yaml
config/litellm/: config.yaml
docker/postgres/init/: 01-init-databases.sql
docs/: AIOps架构设计.md
docs/runbooks/: hermes-bootstrap.md
docs/superpowers/plans/: 2026-05-11-aiops-platform-rollout.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_alert_risk_level.py
scripts/: seed_netbox.py
src/aiops/: __init__.py  app.py  lifecycle.py  logging.py  settings.py
src/aiops/bot/: __init__.py  approval_handlers.py  cost_handlers.py  incident_handlers.py  killswitch_handlers.py  wiki_handlers.py
src/aiops/bot/skills/aiops-ping/: SKILL.md
src/aiops/cli/: __init__.py  aiops_cli.py
src/aiops/cmdb/: __init__.py  netbox_client.py
src/aiops/contracts/: __init__.py  approvals.py  bot.py  incidents.py
src/aiops/db/: __init__.py  models.py  repositories.py  session.py
src/aiops/gateway/: __init__.py  hooks.py  routes.py  services.py
src/aiops/hermes_plugin/: __init__.py  commands_registry.py  hooks.py  plugin.yaml  tools.py  tools_registry.py
src/aiops/observability/: __init__.py  langfuse_client.py
src/aiops/plugins/: __init__.py  read_only.py  sanitize.py  transports.py
tests/integration/: test_hermes_plugin_loads.py
wiki/_staging/: README.md
wiki/incidents/: README.md
wiki/linux/: _index.md  disk-full-runbook.md  systemd-troubleshooting.md
wiki/network/: _index.md
wiki/network/h3c/: _index.md  interface-flapping.md  ospf-neighbor-down.md
