[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aiops-v2"
version = "0.1.0"
description = "AIOps 智能自动化运维平台"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.entry-points."hermes_agent.plugins"]
aiops_hooks = "aiops.hermes_plugin:register_hooks"
aiops_tools = "aiops.hermes_plugin:register_tools"
aiops_bot = "aiops.hermes_plugin:register_bot_commands"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "respx>=0.23.1",
    "types-pyyaml>=6.0.12.20260508",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["ansible_runner", "asyncpg", "lark_oapi", "lark_oapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hermes_runtime: requires Hermes runtime from the external VM environment",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiops"]
