[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "aiops"
version = "0.1.0"
description = "AIOps 智能自动化运维平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "temporalio>=1.27.0",
    "litellm>=1.83.14",
    "langfuse>=4.6.1",
    "pynetbox>=7.7.0",
    "scrapli[asyncssh]>=2026.2.20",
    "scrapli-community>=2025.1.30",
    "napalm>=5.1.0",
    "ansible-runner>=2.4.3",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "pyyaml>=6.0.3",
    "click>=8.1.8",
    "ulid-py>=1.1.0",
]

[project.entry-points."hermes_agent.plugins"]
aiops = "aiops.hermes_plugin:register"

[project.scripts]
aiops-cli = "aiops.cli.aiops_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260510",
    "respx>=0.23.1",
    "testcontainers[postgres,redis]>=4.14.2",
    "freezegun>=1.5.5",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["ansible_runner", "asyncpg", "lark_oapi", "lark_oapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hermes_runtime: requires Hermes runtime from the external VM environment",
    "integration: requires local docker infrastructure",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiops"]
